[gd_scene load_steps=8 format=3 uid="uid://b5lcw00b088kv"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_bnuca"]
[ext_resource type="Script" path="res://scripts/bag_generator.gd" id="2_mn80y"]
[ext_resource type="Script" path="res://scripts/board_area.gd" id="3_7mhnm"]
[ext_resource type="Texture2D" uid="uid://cdyxp3nii5xj1" path="res://resources/border.png" id="4_n1slg"]
[ext_resource type="FontFile" uid="uid://b7h4fbeevjmta" path="res://resources/Teko-Bold.ttf" id="4_ucfe5"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="5_b7ban"]

[sub_resource type="LabelSettings" id="LabelSettings_hmmun"]
line_spacing = 0.0
font = ExtResource("4_ucfe5")
font_size = 32

[node name="Game" type="Node"]
script = ExtResource("1_bnuca")

[node name="BagGenerator" type="Node" parent="."]
script = ExtResource("2_mn80y")

[node name="BoardArea" type="Node2D" parent="."]
z_index = 5
position = Vector2(470, 64)
script = ExtResource("3_7mhnm")

[node name="Border" type="TextureRect" parent="BoardArea"]
z_index = 2
offset_left = -10.0
offset_top = -130.0
offset_right = 346.0
offset_bottom = 650.0
texture = ExtResource("4_n1slg")
stretch_mode = 2

[node name="ColorRect" type="ColorRect" parent="BoardArea/Border"]
z_index = -2
z_as_relative = false
custom_minimum_size = Vector2(320, 640)
offset_left = 10.0
offset_top = 130.0
offset_right = 330.0
offset_bottom = 770.0
color = Color(0.054902, 0.054902, 0.054902, 1)

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Hud" type="CanvasLayer" parent="."]
script = ExtResource("5_b7ban")

[node name="MarginContainer" type="MarginContainer" parent="Hud"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Hud/MarginContainer"]
layout_mode = 2

[node name="LinesLabel" type="Label" parent="Hud/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Lines cleared : "
label_settings = SubResource("LabelSettings_hmmun")

[node name="ScoreLabel" type="Label" parent="Hud/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Score:"
label_settings = SubResource("LabelSettings_hmmun")

[node name="NextLabel" type="Label" parent="Hud"]
texture_filter = 1
offset_left = 488.0
offset_top = 100.0
offset_right = 552.0
offset_bottom = 147.0
size_flags_horizontal = 4
text = "Next:"
label_settings = SubResource("LabelSettings_hmmun")

[node name="HeldLabel" type="Label" parent="Hud"]
texture_filter = 1
offset_left = 488.0
offset_top = 100.0
offset_right = 552.0
offset_bottom = 147.0
size_flags_horizontal = 4
text = "Held:"
label_settings = SubResource("LabelSettings_hmmun")

[connection signal="setup_ready" from="BoardArea" to="Hud" method="setup_labels_position"]
